# textnow

./: .gitignore  Dockerfile  Pipfile  app.py  backup.dump  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  readme
.github/workflows/: ci.yml  deploy.yml
app/: admin.py  apps.py  constants.py  exceptions.py  models.py  permissions.py  response_messages.py  serializers.py  service.py  signals.py  tasks.py  throttles.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_phoneaccount_customer.py  0003_applemailproxy_creator_alter_applemailproxy_proxy_ip.py  0004_alter_phoneaccount_provider.py  0005_remove_applemailproxy_creator.py  0006_phoneaccount_purchased_mail.py  0007_customer_created_at_customer_updated_at.py  0008_remove_customer_created_at_and_more.py  0009_customer_created_at_customer_updated_at_and_more.py  0010_purchasedmail_is_delete.py  0011_customer_is_provided_customer_provided_at_and_more.py  0012_remove_customer_is_provided_and_more.py  0013_customer_is_message_first.py  0014_messagehistorylog.py  0015_customer_date_use.py  0016_remove_customer_is_message_first.py  0017_alter_customer_date_use.py  0018_customerassignhistory_reset_count_and_more.py  0019_customerassignhistory_is_revoke.py  0020_proxy_setting.py  0021_proxy_setting_seed.py  0022_alter_phoneaccount_provider_default.py
app/templates/: customer.html
customer/: admin.py  models.py  permissions.py  serializers.py  service.py  urls.py  utils.py  views.py
customer/migrations/: 0001_initial.py  0002_employee_customer_phoneaccount_creator_and_more.py  0003_remove_phoneaccount_batch_hash_and_more.py  0004_mailprovider.py  0005_mailtype.py  0006_mailpurchase_purchasedmail.py  (+19 more)
sideline/: asgi.py  celery.py  healthy.py  settings.py  urls.py  wsgi.py
(+3 files in other folders)
