[tool.poetry]
package-mode = false

[project]
name = "sideline-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "huyenht"}
]
requires-python = ">=3.12"
dependencies = [
    "drf-yasg (>=1.21.11,<2.0.0)",
    "django (==4.2)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "djangorestframework-simplejwt[blacklist] (>=5.5.1,<6.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "logzero (>=1.7.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "django-import-export (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
